# rust-weather-cli

./: .gitignore  Cargo.toml  README.md  plan.txt
src/: main.rs
